# Hex-Game

./: .gitignore  LICENSE  Procfile  README.md  RustConfig
back/: Cargo.toml
hex_back/: .gitignore  Cargo.toml
hex_back/src/: game.rs  main.rs  tile.rs
hex_back/static/: asset-manifest.json  index.html  precache-manifest.7bd9ccbdb13156652da9cb21efeb0305.js  service-worker.js
hex_back/static/static/css/: main.92adf1c8.chunk.css  main.92adf1c8.chunk.css.map
hex_back/static/static/js/: 2.38038dfe.chunk.js  2.38038dfe.chunk.js.map  main.07443d9b.chunk.js  main.07443d9b.chunk.js.map  runtime-main.75202481.js  runtime-main.75202481.js.map
hex_front/: package-lock.json  package.json
hex_front/src/: App.js  NewGame.js  RawBack.js
hex_front/src/Components/: Board.css  Board.js  Hexagon.css  Hexagon.js  Square.css  Square.js
