[package]
name = "hex_back"
version = "0.1.0"
authors = ["volrk"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }
rocket_contrib = "0.4.6"
rocket_cors = "0.5.0"